<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   tools:activity="by.jeffset.layncher.welcome.WelcomeActivity"
   >

   <TextView
      style="?android:textAppearanceMedium"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:gravity="center"
      android:tag="by.jeffset.animatable"
      android:text="@string/layncher_settings_caption"
      android:textSize="25sp"
      />

   <android.support.v7.widget.CardView
      android:id="@android:id/background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:cardBackgroundColor="?colorNewAppsStrip"
      app:cardCornerRadius="10dp"
      app:cardElevation="@dimen/card_elevation">

      <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">

         <android.support.v7.widget.CardView
            android:id="@+id/themeCardDark"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme.Dark"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintDimensionRatio="w,"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlHardcoded"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp">

            <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:orientation="vertical">

               <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:maxLines="1"
                  android:text="@string/app_name"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  />

               <RadioButton
                  android:id="@+id/rbDark"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checked="false"
                  android:text="@string/rb_dark_text"/>
            </LinearLayout>
         </android.support.v7.widget.CardView>

         <android.support.v7.widget.CardView
            android:id="@+id/themeCardLight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme.Light"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlHardcoded"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp">

            <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:orientation="vertical">

               <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:text="@string/app_name"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  />

               <RadioButton
                  android:id="@+id/rbLight"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checked="true"
                  android:text="@string/rb_light_text"/>
            </LinearLayout>
         </android.support.v7.widget.CardView>

         <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

         <TextView
            android:id="@+id/textViewLayoutTip"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center|start"
            android:text="@string/tip_layout_standard"
            app:layout_constraintBottom_toTopOf="@+id/button_next_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"/>

         <TextView
            android:id="@+id/textView3"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/theme_caption"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

         <TextView
            android:id="@+id/textView6"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/layout_style_caption"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"/>

         <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
               android:id="@+id/rbStandardLayout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:checked="true"
               android:text="@string/rb_standard_layout"/>

            <RadioButton
               android:id="@+id/rbLargeLayout"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/rb_large_layout"/>

         </RadioGroup>

         <Button
            android:enabled="false"
            android:id="@+id/button_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onMainActivityStart"
            android:text="@string/greetings_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

         <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

      </android.support.constraint.ConstraintLayout>
   </android.support.v7.widget.CardView>
</LinearLayout>
