<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="by.jeffset.layncher.welcome.WelcomeActivity">

   <android.support.v7.widget.CardView
      android:id="@android:id/background"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="16dp"
      android:layout_marginBottom="0dp"
      app:cardBackgroundColor="@color/colorPrimary"
      app:cardCornerRadius="10dp"
      app:cardElevation="@dimen/card_elevation">

      <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">

         <TextView
            style="?android:textAppearanceLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:textStyle="bold"
            />

         <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon"
            android:tag="by.jeffset.animatable"
            tools:ignore="ContentDescription"/>

         <TextView
            android:id="@android:id/text1"
            style="?android:textAppearanceMediumInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_layncher"
            />
      </LinearLayout>

      <Button
         android:id="@+id/button_next_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="16dp"
         android:onClick="onBtnNextPage"
         android:text="@string/button_next_page"/>
   </android.support.v7.widget.CardView>

</FrameLayout>
