<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.jeffset.layncher.welcome.WelcomeActivity">

    <android.support.v7.widget.CardView
        android:id="@android:id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="?selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <TextView
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@android:id/text1"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:tag="by.jeffset.animatable"
                android:text="@string/info_text_1"
                android:textColor="@color/colorPrimaryDark"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <Button
            android:id="@+id/button_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp"
            android:onClick="onBtnNextPage"
            android:text="@string/button_next_page"/>
    </android.support.v7.widget.CardView>

</FrameLayout>
